5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4358/executions/1721_3060.log
== TEST (2019-05-02 18:19:14) 
-- CODE:
d1=int(input("Digite de 1 a 6:"))
d2=int(input("Digite de 1 a 6:"))
nr=int(input("Digite o numero de rodadas:"))
p1=d1+d2+1
p2=(d1+d2+1)*nr
p3=d1*d2
if(d1+d2=12):
	print(CONTRICAO)
else:
	print(p1)
if(d1+d2<5):
	print(POLEN)
else:
	print(p2)
if(d1+d2!=12):
	print("Caso contrario")
else:
	print(p3)
if(d1+d2!=5):
	print("Caso contrario")
else:
	print(p3)
-- ERROR:
File "XXXX", line 7
    if(d1+d2=12):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:19:28) 
-- CODE:
d1=int(input("Digite de 1 a 6:"))
d2=int(input("Digite de 1 a 6:"))
nr=int(input("Digite o numero de rodadas:"))
p1=d1+d2+1
p2=(d1+d2+1)*nr
p3=d1*d2
if(d1+d2==12):
	print(CONTRICAO)
else:
	print(p1)
if(d1+d2<5):
	print(POLEN)
else:
	print(p2)
if(d1+d2!=12):
	print("Caso contrario")
else:
	print(p3)
if(d1+d2!=5):
	print("Caso contrario")
else:
	print(p3)
-- OUTPUT:
9
72
Caso contrario
Caso contrario
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:20:53) 
-- CODE:
d1=int(input("Digite de 1 a 6:"))
d2=int(input("Digite de 1 a 6:"))
nr=int(input("Digite o numero de rodadas:"))
p1=d1+d2+1
p2=(d1+d2+1)*nr
p3=d1*d2
if(d1+d2==12):
	print(CONTRICAO)
else:
	print(p1)
if(d1+d2<5):
	print(POLEN)
else:
	print(p2)
if(d1+d2!=12):
	print("Caso contrario")
else:
	print(p3)
if(d1+d2!=5):
	print("Caso contrario")
else:
	print(p3)
-- EXECUTION TIME:
0.189305
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
9
72
Caso contrario
Caso contrario
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
16
80
Caso contrario
Caso contrario
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:21:02) 
-- CODE:
d1=int(input("Digite de 1 a 6:"))
d2=int(input("Digite de 1 a 6:"))
nr=int(input("Digite o numero de rodadas:"))
p1=d1+d2+1
p2=(d1+d2+1)*nr
p3=d1*d2
if(d1+d2==12):
	print(CONTRICAO)
else:
	print(p1)
if(d1+d2<5):
	print(POLEN)
else:
	print(p2)
if(d1+d2!=12):
	print("Caso contrario")
else:
	print(p3)
if(d1+d2!=5):
	print("Caso contrario")
else:
	print(p3)
-- OUTPUT:
9
72
Caso contrario
Caso contrario
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:21:39) 
-- CODE:
d1=int(input("Digite de 1 a 6:"))
d2=int(input("Digite de 1 a 6:"))
nr=int(input("Digite o numero de rodadas:"))
p1=d1+d2+1
p2=(d1+d2+1)*nr
p3=d1*d2
if(d1+d2==12):
	print("CONTRICAO")
else:
	print(p1)
if(d1+d2<5):
	print("POLEN")
else:
	print(p2)
if(d1+d2!=12):
	print("Caso contrario")
else:
	print(p3)
if(d1+d2!=5):
	print("Caso contrario")
else:
	print(p3)
-- EXECUTION TIME:
0.212276
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
9
72
Caso contrario
Caso contrario
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
16
80
Caso contrario
Caso contrario
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
3
POLEN
Caso contrario
Caso contrario
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:21:41) 
-- CODE:
d1=int(input("Digite de 1 a 6:"))
d2=int(input("Digite de 1 a 6:"))
nr=int(input("Digite o numero de rodadas:"))
p1=d1+d2+1
p2=(d1+d2+1)*nr
p3=d1*d2
if(d1+d2==12):
	print("CONTRICAO")
else:
	print(p1)
if(d1+d2<5):
	print("POLEN")
else:
	print(p2)
if(d1+d2!=12):
	print("Caso contrario")
else:
	print(p3)
if(d1+d2!=5):
	print("Caso contrario")
else:
	print(p3)
-- OUTPUT:
9
72
Caso contrario
Caso contrario
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:22:33) 
-- CODE:
d1=int(input("Digite de 1 a 6:"))
d2=int(input("Digite de 1 a 6:"))
nr=int(input("Digite o numero de rodadas:"))
p1=d1+d2+1
p2=(d1+d2+1)*nr
p3=d1*d2
if(d1+d2==12):
	print("CONTRICAO")
else:
	print(p1)
if(d1+d2<5):
	print("POLEN")

-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:26:38) 
-- CODE:
d1=int(input("Digite de 1 a 6:"))
d2=int(input("Digite de 1 a 6:"))
nr=int(input("Digite o numero de rodadas:"))
p1=d1+d2+1
p2=(d1+d2+1)*nr
p3=d1*d2
if(d1+d2==12):
	print("CONTRICAO")
else:
	print(p1)
if(d1+d2<5):
	print("POLEN")
if(d1+d2!=12):
	print("FRAQUEZA")
else:
	print(p3)
if(d1+d2!<5):
	print("FRAQUEZA")
else:
	print(p3)
-- ERROR:
File "XXXX", line 17
    if(d1+d2!<5):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:26:55) 
-- CODE:
d1=int(input("Digite de 1 a 6:"))
d2=int(input("Digite de 1 a 6:"))
nr=int(input("Digite o numero de rodadas:"))
p1=d1+d2+1
p2=(d1+d2+1)*nr
p3=d1*d2
if(d1+d2==12):
	print("CONTRICAO")
else:
	print(p1)
if(d1+d2<5):
	print("POLEN")
if(d1+d2!=12):
	print("FRAQUEZA")
else:
	print(p3)
if(d1+d2>5):
	print("FRAQUEZA")
else:
	print(p3)
-- OUTPUT:
9
FRAQUEZA
FRAQUEZA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:27:24) 
-- CODE:
d1=int(input("Digite de 1 a 6:"))
d2=int(input("Digite de 1 a 6:"))
nr=int(input("Digite o numero de rodadas:"))
p1=d1+d2+1
p2=(d1+d2+1)*nr
p3=d1*d2
if(d1+d2==12):
	print("CONTRICAO")
else:
	print(p1)
if(d1+d2<5):
	print("POLEN")
if(d1+d2!=12):
	print("FRAQUEZA")
else:
	print(p3)
if(d1+d2>5):
	print("FRAQUEZA")
else:
	print(p3)
-- OUTPUT:
9
FRAQUEZA
FRAQUEZA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:27:27) 
-- CODE:
d1=int(input("Digite de 1 a 6:"))
d2=int(input("Digite de 1 a 6:"))
nr=int(input("Digite o numero de rodadas:"))
p1=d1+d2+1
p2=(d1+d2+1)*nr
p3=d1*d2
if(d1+d2==12):
	print("CONTRICAO")
else:
	print(p1)
if(d1+d2<5):
	print("POLEN")
if(d1+d2!=12):
	print("FRAQUEZA")
else:
	print(p3)
if(d1+d2>5):
	print("FRAQUEZA")
else:
	print(p3)
-- EXECUTION TIME:
0.129896
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
9
FRAQUEZA
FRAQUEZA
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
16
FRAQUEZA
FRAQUEZA
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
3
POLEN
FRAQUEZA
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:27:37) 
-- CODE:
d1=int(input("Digite de 1 a 6:"))
d2=int(input("Digite de 1 a 6:"))
nr=int(input("Digite o numero de rodadas:"))
p1=d1+d2+1
p2=(d1+d2+1)*nr
p3=d1*d2
if(d1+d2==12):
	print("CONTRICAO")
else:
	print(p1)
if(d1+d2<5):
	print("POLEN")
if(d1+d2!=12):
	print("FRAQUEZA")
else:
	print(p3)
if(d1+d2>5):
	print("FRAQUEZA")
else:
	print(p3)
-- OUTPUT:
9
FRAQUEZA
FRAQUEZA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:29:48) 
-- CODE:
d1=int(input("Digite de 1 a 6:"))
d2=int(input("Digite de 1 a 6:"))
nr=int(input("Digite o numero de rodadas:"))
p1=d1+d2+1
p2=(d1+d2+1)*nr
p3=d1*d2
if(d1+d2==12):
	print("CONTRICAO")
else:
	print(p1)
if(d1+d2<5):
	print("POLEN")
if(d1+d2!=12):
	print("FRAQUEZA")
else:
	print(p3)
if(d1+d2>5):
	print("FRAQUEZA")
else:
	print(p3)
-- EXECUTION TIME:
0.153391
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
9
FRAQUEZA
FRAQUEZA
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
16
FRAQUEZA
FRAQUEZA
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
3
POLEN
FRAQUEZA
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:29:50) 
-- CODE:
d1=int(input("Digite de 1 a 6:"))
d2=int(input("Digite de 1 a 6:"))
nr=int(input("Digite o numero de rodadas:"))
p1=d1+d2+1
p2=(d1+d2+1)*nr
p3=d1*d2
if(d1+d2==12):
	print("CONTRICAO")
else:
	print(p1)
if(d1+d2<5):
	print("POLEN")
if(d1+d2!=12):
	print("FRAQUEZA")
else:
	print(p3)
if(d1+d2>5):
	print("FRAQUEZA")
else:
	print(p3)
-- OUTPUT:
9
FRAQUEZA
FRAQUEZA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:32:27) 
-- CODE:
d1=int(input("Digite de 1 a 6:"))
d2=int(input("Digite de 1 a 6:"))
nr=int(input("Digite o numero de rodadas:"))
p1=d1+d2+1
p2=(d1+d2+1)*nr
p3=d1*d2
if(d1+d2==12):
	print("CONSTRICAO")
else:
	print(p1)
if(d1+d2<5):
	print("POLEN")
if(d1+d2!=12):
	print("FRAQUEZA")
else:
	print(p3)
if(d1+d2>5):
	print("FRAQUEZA")
else:
	print(p3)
-- EXECUTION TIME:
0.125742
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
9
FRAQUEZA
FRAQUEZA
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
16
FRAQUEZA
FRAQUEZA
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
3
POLEN
FRAQUEZA
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:32:29) 
-- CODE:
d1=int(input("Digite de 1 a 6:"))
d2=int(input("Digite de 1 a 6:"))
nr=int(input("Digite o numero de rodadas:"))
p1=d1+d2+1
p2=(d1+d2+1)*nr
p3=d1*d2
if(d1+d2==12):
	print("CONSTRICAO")
else:
	print(p1)
if(d1+d2<5):
	print("POLEN")
if(d1+d2!=12):
	print("FRAQUEZA")
else:
	print(p3)
if(d1+d2>5):
	print("FRAQUEZA")
else:
	print(p3)
-- OUTPUT:
9
FRAQUEZA
FRAQUEZA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:33:14) 
-- CODE:
d1=int(input("Digite de 1 a 6:"))
d2=int(input("Digite de 1 a 6:"))
nr=int(input("Digite o numero de rodadas:"))
p1=d1+d2+1
p2=(d1+d2+1)*nr
p3=d1*d2
if(d1+d2==12):
	print("CONSTRICAO")
else:
	print(p1)
if(d1+d2<5):
	print("POLEN")
if(d1+d2!=12):
	print("FRAQUEZA")
else:
	print(p3)
if(d1+d2>5):
	print("FRAQUEZA")
else:
	print(p3)
-- OUTPUT:
9
FRAQUEZA
FRAQUEZA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:35:04) 
-- CODE:
d1=int(input("Digite de 1 a 6:"))
d2=int(input("Digite de 1 a 6:"))
r=int(input("Digite o numero de rodadas:"))
p1=d1+d2+1
p2=(d1+d2+1)*r
p3=d1*d2
if(d1+d2==12):
	print("CONSTRICAO")
else:
	print(p1)
if(d1+d2<5):
	print("POLEN")
if(d1+d2!=12):
	print("FRAQUEZA")
else:
	print(p3)
if(d1+d2>5):
	print("FRAQUEZA")
else:
	print(p3)
-- OUTPUT:
9
FRAQUEZA
FRAQUEZA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 18:45:10) 
-- CODE:
d1=int(input("Digite de 1 a 6:"))
d2=int(input("Digite de 1 a 6:"))
r=int(input("Digite o numero de rodadas:"))
p1=d1+d2+1
p2=(d1+d2+1)*r
p3=d1*d2
if((d1<1)or(d1>6)or((d2<1))or(d2>6)):
	print("Entrada invalida")
elif(d1+d2==12):
	print("CONSTRICAO")
	print(p1)
elif(d1+d2<5):
	print("POLEN")
	print(p2)
else:
	print("FRAQUEZA")
	print(p3)

-- OUTPUT:
FRAQUEZA
15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 18:45:22) 
-- CODE:
d1=int(input("Digite de 1 a 6:"))
d2=int(input("Digite de 1 a 6:"))
r=int(input("Digite o numero de rodadas:"))
p1=d1+d2+1
p2=(d1+d2+1)*r
p3=d1*d2
if((d1<1)or(d1>6)or((d2<1))or(d2>6)):
	print("Entrada invalida")
elif(d1+d2==12):
	print("CONSTRICAO")
	print(p1)
elif(d1+d2<5):
	print("POLEN")
	print(p2)
else:
	print("FRAQUEZA")
	print(p3)

-- EXECUTION TIME:
0.170978
-- TEST CASE 1:
---- input:
5
3
8
---- correct output:
FRAQUEZA
15
---- user output:
FRAQUEZA
15
-- TEST CASE 2:
---- input:
7
8
5
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
1
1
9
---- correct output:
POLEN
27
---- user output:
POLEN
27
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
